--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
       "tugas1/index.html",
       "tugas2/index.html",
       "tugas3/index.html",
-      "tugas4/index.html"
+      "tugas4/index.html",
+      "tugas5/index.html",
+      "tugas6UTS/index.html",
     ];
     let current = 0;
 
