--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       border-radius: 10px;
       background: white;
       margin-bottom: 15px;
+      overflow: auto; /* Menambahkan overflow auto agar konten yang lebih besar dapat di-scroll */
     }
     button {
       padding: 10px 25px;
