--- a/tugas1/index.html
+++ b/tugas1/index.html
@@ -1,3 +1,3 @@
 <h1>Tugas 1</h1>
 <p>Tugas 1 Tulis Tangan : TAG HTML 10 & DAN Propety CSS</p>
-<img src="tugas1.jpg" alt="Tugas 1 tag HTML dan propeti CSS" height="100px" width="100" class="photo">
+<img src="tugas1.jpg" alt="Tugas 1 tag HTML dan propeti CSS" height="100px" width="100px" class="photo">
